# OpenglApplication

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/cookoo/opengl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fragment.fsh  vertex.vsh
app/src/main/cpp/: ShaderUtils.cpp
app/src/main/java/com/cookoo/opengl/: CrashHandler.java  MainActivity.java  MyApplication.java
app/src/main/java/com/cookoo/opengl/renderer/: TestRenderer.java
app/src/main/java/com/cookoo/opengl/shader/: ShaderJniUtils.java  ShaderUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/cookoo/opengl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
